--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Our Date Blog
 description: Memories from our adventures together
-url: https://minininja-swag.github.io/date-blog
+url: https://minininja-swag.github.io
+baseurl: /date-blog
 theme: minima
 
 collections:
@@ -22,5 +23,4 @@ plugins:
 paginate: 6
 paginate_path: "/page:num"
 
-# Build search index
 exclude: [admin, node_modules, README.md]
